// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FieldLevelValidation /> Change field (validate and warning): actions history (input 0). 1`] = `
"@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'firstName'}
 payload: {value: 't'},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {errors: {firstName: undefined}, warnings: {}},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'firstName'}
 payload: {value: ''},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {
		errors: {firstName: 'Field required.'},
		warnings: {}
	},
	submitted: undefined
}"
`;

exports[`<FieldLevelValidation /> Change field (validate and warning): actions history (input 1). 1`] = `
"@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'lastName'}
 payload: {value: ''},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {
		errors: {lastName: 'Field required.'},
		warnings: {}
	},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'lastName'}
 payload: {value: 't'},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {
		errors: {lastName: 'Must be 2 characters or more.'},
		warnings: {}
	},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'lastName'}
 payload: {value: 'te'},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {errors: {lastName: undefined}, warnings: {}},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'lastName'}
 payload: {value: 'tes'},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {errors: {lastName: undefined}, warnings: {}},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'lastName'}
 payload: {value: 'test'},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {errors: {lastName: undefined}, warnings: {}},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'lastName'}
 payload: {value: 'tes'},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {errors: {lastName: undefined}, warnings: {}},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'lastName'}
 payload: {value: 'te'},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {errors: {lastName: undefined}, warnings: {}},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'lastName'}
 payload: {value: 't'},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {
		errors: {lastName: 'Must be 2 characters or more.'},
		warnings: {}
	},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'lastName'}
 payload: {value: ''},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {
		errors: {lastName: 'Field required.'},
		warnings: {}
	},
	submitted: undefined
}"
`;

exports[`<FieldLevelValidation /> Change field (validate and warning): actions history (input 2). 1`] = `
"@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'age'}
 payload: {value: ''},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {
		errors: {age: 'Field required.'},
		warnings: {age: undefined}
	},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'age'}
 payload: {value: '1'},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {
		errors: {age: undefined},
		warnings: {age: 'Too yang.'}
	},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'age'}
 payload: {value: '18'},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {
		errors: {age: undefined},
		warnings: {age: undefined}
	},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'age'}
 payload: {value: '1'},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {
		errors: {age: undefined},
		warnings: {age: 'Too yang.'}
	},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'age'}
 payload: {value: '19'},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {
		errors: {age: undefined},
		warnings: {age: undefined}
	},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'age'}
 payload: {value: '1'},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {
		errors: {age: undefined},
		warnings: {age: 'Too yang.'}
	},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'age'}
 payload: {value: ''},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {
		errors: {age: 'Field required.'},
		warnings: {age: undefined}
	},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'age'}
 payload: {value: '0'},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {
		errors: {age: undefined},
		warnings: {age: 'Too yang.'}
	},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'age'}
 payload: {value: ''},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {
		errors: {age: 'Field required.'},
		warnings: {age: undefined}
	},
	submitted: undefined
}"
`;

exports[`<FieldLevelValidation /> Change field (validate and warning): actions history (input 3). 1`] = `
"@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'number'}
 payload: {value: ''},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {errors: {}, warnings: {number: undefined}},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'number'}
 payload: {value: '1'},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {errors: {}, warnings: {number: undefined}},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'number'}
 payload: {value: ''},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {errors: {}, warnings: {number: undefined}},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'number'}
 payload: {value: '5'},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {errors: {}, warnings: {number: undefined}},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'number'}
 payload: {value: '50'},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {errors: {}, warnings: {number: undefined}},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'number'}
 payload: {value: '500'},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {errors: {}, warnings: {number: 'Too large.'}},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'number'}
 payload: {value: '50'},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {errors: {}, warnings: {number: undefined}},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'number'}
 payload: {value: '5'},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {errors: {}, warnings: {number: undefined}},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'number'}
 payload: {value: ''},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {errors: {}, warnings: {number: undefined}},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'number'}
 payload: {value: '-1'},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {errors: {}, warnings: {number: 'Too small.'}},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'number'}
 payload: {value: '-11'},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {errors: {}, warnings: {number: 'Too small.'}},
	submitted: undefined
},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'number'}
 payload: {value: '-11'},
@@react-redux-form-lite/UPDATE_VALIDATE_AND_WARNING_MESSAGES
 meta: {form: 'simple'}
 payload: {
	value: {errors: {}, warnings: {number: 'Too small.'}},
	submitted: undefined
}"
`;

exports[`<FieldLevelValidation /> Changed field (validate and warning firstName: validate={validateIsRequired}): store 1`] = `
Object {
  "form": Object {
    "activeField": "firstName",
    "blurred": false,
    "changed": true,
    "errorsMap": Object {
      "firstName": "Field required.",
    },
    "focused": true,
    "hasErrors": true,
    "hasWarnings": false,
    "submitted": false,
    "warningsMap": Object {},
  },
  "meta": Object {
    "age": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "firstName": Object {
      "active": true,
      "blurred": false,
      "changed": true,
      "error": "Field required.",
      "focused": true,
      "warning": "",
    },
    "lastName": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "number": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
  },
  "values": Object {
    "age": undefined,
    "firstName": "",
    "lastName": undefined,
    "number": undefined,
  },
}
`;

exports[`<FieldLevelValidation /> Changed field (validate and warning validate={validateIsRequired} warn={warnTooYang}): store 1`] = `
Object {
  "form": Object {
    "activeField": "age",
    "blurred": false,
    "changed": true,
    "errorsMap": Object {},
    "focused": true,
    "hasErrors": false,
    "hasWarnings": false,
    "submitted": false,
    "warningsMap": Object {},
  },
  "meta": Object {
    "age": Object {
      "active": true,
      "blurred": false,
      "changed": true,
      "error": "",
      "focused": true,
      "warning": "",
    },
    "firstName": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "lastName": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "number": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
  },
  "values": Object {
    "age": "18",
    "firstName": undefined,
    "lastName": undefined,
    "number": undefined,
  },
}
`;

exports[`<FieldLevelValidation /> Changed field (validate and warning warn={[warnTooSmall, warnTooLarge]}): store 1`] = `
Object {
  "form": Object {
    "activeField": "number",
    "blurred": false,
    "changed": true,
    "errorsMap": Object {},
    "focused": true,
    "hasErrors": false,
    "hasWarnings": true,
    "submitted": false,
    "warningsMap": Object {
      "number": "Too large.",
    },
  },
  "meta": Object {
    "age": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "firstName": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "lastName": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "number": Object {
      "active": true,
      "blurred": false,
      "changed": true,
      "error": "",
      "focused": true,
      "warning": "Too large.",
    },
  },
  "values": Object {
    "age": undefined,
    "firstName": undefined,
    "lastName": undefined,
    "number": "101",
  },
}
`;

exports[`<FieldLevelValidation /> Changed field (validate and warninglastName: validate={[validateIsRequired, validateMinLength(2)]}): store 1`] = `
Object {
  "form": Object {
    "activeField": "lastName",
    "blurred": false,
    "changed": true,
    "errorsMap": Object {
      "lastName": "Field required.",
    },
    "focused": true,
    "hasErrors": true,
    "hasWarnings": false,
    "submitted": false,
    "warningsMap": Object {},
  },
  "meta": Object {
    "age": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "firstName": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "lastName": Object {
      "active": true,
      "blurred": false,
      "changed": true,
      "error": "Field required.",
      "focused": true,
      "warning": "",
    },
    "number": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
  },
  "values": Object {
    "age": undefined,
    "firstName": undefined,
    "lastName": "",
    "number": undefined,
  },
}
`;

exports[`<FieldLevelValidation /> Focus field: actions history. 1`] = `
Array [
  Object {
    "meta": Object {
      "field": "firstName",
      "form": "simple",
    },
    "type": "@@react-redux-form-lite/FOCUS",
  },
]
`;

exports[`<FieldLevelValidation /> Focus field: store 1`] = `
Object {
  "form": Object {
    "activeField": "firstName",
    "blurred": false,
    "changed": false,
    "errorsMap": Object {},
    "focused": true,
    "hasErrors": false,
    "hasWarnings": false,
    "submitted": false,
    "warningsMap": Object {},
  },
  "meta": Object {
    "age": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "firstName": Object {
      "active": true,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": true,
      "warning": "",
    },
    "lastName": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "number": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
  },
  "values": Object {
    "age": undefined,
    "firstName": undefined,
    "lastName": undefined,
    "number": undefined,
  },
}
`;

exports[`<FieldLevelValidation /> Register form and fields: action history. 1`] = `
Array [
  Object {
    "meta": Object {
      "form": "simple",
    },
    "type": "@@react-redux-form-lite/REGISTER_FORM",
  },
  Object {
    "meta": Object {
      "field": "firstName",
      "form": "simple",
    },
    "payload": Object {
      "value": undefined,
    },
    "type": "@@react-redux-form-lite/REGISTER_FIELD",
  },
  Object {
    "meta": Object {
      "field": "lastName",
      "form": "simple",
    },
    "payload": Object {
      "value": undefined,
    },
    "type": "@@react-redux-form-lite/REGISTER_FIELD",
  },
  Object {
    "meta": Object {
      "field": "age",
      "form": "simple",
    },
    "payload": Object {
      "value": undefined,
    },
    "type": "@@react-redux-form-lite/REGISTER_FIELD",
  },
  Object {
    "meta": Object {
      "field": "number",
      "form": "simple",
    },
    "payload": Object {
      "value": undefined,
    },
    "type": "@@react-redux-form-lite/REGISTER_FIELD",
  },
]
`;

exports[`<FieldLevelValidation /> Register form and fields: store. 1`] = `
Object {
  "form": Object {
    "activeField": "",
    "blurred": false,
    "changed": false,
    "errorsMap": Object {},
    "focused": false,
    "hasErrors": false,
    "hasWarnings": false,
    "submitted": false,
    "warningsMap": Object {},
  },
  "meta": Object {
    "age": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "firstName": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "lastName": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "number": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
  },
  "values": Object {
    "age": undefined,
    "firstName": undefined,
    "lastName": undefined,
    "number": undefined,
  },
}
`;

exports[`<FieldLevelValidation /> Render field-level-validation form (inputs). 1`] = `
Array [
  <input
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />,
  <input
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />,
  <input
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />,
  <input
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />,
]
`;

exports[`<FieldLevelValidation /> Submit without touch inputs (not valid): store 1`] = `
Object {
  "form": Object {
    "activeField": "",
    "blurred": false,
    "changed": false,
    "errorsMap": Object {
      "age": "Field required.",
      "firstName": "Field required.",
      "lastName": "Field required.",
    },
    "focused": false,
    "hasErrors": true,
    "hasWarnings": false,
    "submitted": true,
    "warningsMap": Object {},
  },
  "meta": Object {
    "age": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "Field required.",
      "focused": false,
      "warning": "",
    },
    "firstName": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "Field required.",
      "focused": false,
      "warning": "",
    },
    "lastName": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "Field required.",
      "focused": false,
      "warning": "",
    },
    "number": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
  },
  "values": Object {
    "age": undefined,
    "firstName": undefined,
    "lastName": undefined,
    "number": undefined,
  },
}
`;

exports[`<FieldLevelValidation /> handleSubmit(onSubmit) inside form-component (not valid): firstArg 1`] = `
Object {
  "age": "12",
  "firstName": "",
  "lastName": "t",
  "number": "105",
}
`;

exports[`<FieldLevelValidation /> handleSubmit(onSubmit) inside form-component (not valid): secondArg 1`] = `
Object {
  "form": Object {
    "activeField": "",
    "blurred": true,
    "changed": true,
    "errorsMap": Object {
      "firstName": "Field required.",
      "lastName": "Must be 2 characters or more.",
    },
    "focused": true,
    "hasErrors": true,
    "hasWarnings": true,
    "submitted": true,
    "warningsMap": Object {
      "age": "Too yang.",
      "number": "Too large.",
    },
  },
  "meta": Object {
    "age": Object {
      "active": false,
      "blurred": true,
      "changed": true,
      "error": "",
      "focused": true,
      "warning": "Too yang.",
    },
    "firstName": Object {
      "active": false,
      "blurred": true,
      "changed": true,
      "error": "Field required.",
      "focused": true,
      "warning": "",
    },
    "lastName": Object {
      "active": false,
      "blurred": true,
      "changed": true,
      "error": "Must be 2 characters or more.",
      "focused": true,
      "warning": "",
    },
    "number": Object {
      "active": false,
      "blurred": true,
      "changed": true,
      "error": "",
      "focused": true,
      "warning": "Too large.",
    },
  },
  "values": Object {
    "age": "12",
    "firstName": "",
    "lastName": "t",
    "number": "105",
  },
}
`;

exports[`<FieldLevelValidation /> handleSubmit(onSubmit) inside form-component (not valid): thirdArg 1`] = `
Object {
  "arrayPush": [Function],
  "blur": [Function],
  "change": [Function],
  "changeSubmitted": [Function],
  "focus": [Function],
  "registerField": [Function],
  "registerForm": [Function],
  "removeField": [Function],
  "removeForm": [Function],
  "setInitialValues": [Function],
  "updateFormState": [Function],
  "updateValidateAndWarningMessages": [Function],
  "updateValidateMessage": [Function],
  "updateValidateMessages": [Function],
  "updateWarningMessage": [Function],
  "updateWarningMessages": [Function],
}
`;

exports[`<FieldLevelValidation /> handleSubmit(onSubmit) inside form-component (valid) 1`] = `
Object {
  "form": Object {
    "activeField": "",
    "blurred": true,
    "changed": true,
    "errorsMap": Object {},
    "focused": true,
    "hasErrors": false,
    "hasWarnings": false,
    "submitted": true,
    "warningsMap": Object {},
  },
  "meta": Object {
    "age": Object {
      "active": false,
      "blurred": true,
      "changed": true,
      "error": "",
      "focused": true,
      "warning": "",
    },
    "firstName": Object {
      "active": false,
      "blurred": true,
      "changed": true,
      "error": "",
      "focused": true,
      "warning": "",
    },
    "lastName": Object {
      "active": false,
      "blurred": true,
      "changed": true,
      "error": "",
      "focused": true,
      "warning": "",
    },
    "number": Object {
      "active": false,
      "blurred": true,
      "changed": true,
      "error": "",
      "focused": true,
      "warning": "",
    },
  },
  "values": Object {
    "age": "18",
    "firstName": "test",
    "lastName": "test",
    "number": "50",
  },
}
`;
